# Assignment-4

./: Dockerfile  README.md  pyproject.toml
app/: main.py
app/helper_lib/: data_loader.py  generator.py  model.py  trainer.py
