[project]
name = "assignment4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pathlib>=1.0.1",
    "pydantic>=2.12.4",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
]
